test/fails/bad_parsing/bad_function6.lgl
int f(int x,, float y) { //Double Comma
    return 0;
}

void main() {
    return;
}